--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,5 +24,9 @@
 @import "_buttons";
 @import "_graphics";
 @import "_links";
-@import "_header";
+@import "global/_header";
+@import "pages/main/_main_screen";
+@import "pages/main/_main_preferences";
+@import "pages/main/_main_advantages";
+@import "pages/main/_main_carousel";
 
