--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -4,7 +4,12 @@ h1{
     font-size: 38px;
     line-height: 46px;
     font-weight: 700;
-    color: $gradient-text;
+    color: white;
+}
+%hero-text{
+    font-size: 38px;
+    line-height: 46px;
+    font-weight: 700;
 }
 h2{
     font-size: 30px;
