--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,4 +15,5 @@ $gradient-main: linear-gradient(128.63deg, #323264 0%, #323264 73.96%, #A54B5F 1
 $gradient-soft: linear-gradient(42.01deg, #323264 14.33%, #323264 51.39%, #7A425E 87.53%);
 $gradient-red: linear-gradient(121.42deg, #F0145A 30.65%, #693264 107.33%);
 $gradient-supersoft: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
-$gradient-text: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+$gradient-text-and-icon: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+$gradient-text-and-icon-reversed: linear-gradient(90.13deg, #EF8080 0.84%, #F0145A 99.96%);
