--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -12,7 +12,9 @@ body{
 	background-color: white;
 }
 .wrapper{
-	background-image: $gradient-supersoft;
+	background: url(../img/png/H-symbol.png) no-repeat top center,
+				$gradient-supersoft;
+	background-size: 872px 1000px, auto auto; 
 	border-width: 0;
 	border-bottom-left-radius: 12px;
 	border-bottom-right-radius: 12px;	
@@ -35,10 +37,6 @@ body{
 	height: 10px;
 	bottom: -20px;
 	left: 20px;
-}
-.wrapper-for-h{
-	background: url(../img/png/H-symbol.png) no-repeat top center;
-	background-size: 872px 1000px; 
 }
 .container{
 	width: 1620px;
