--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,4 +30,7 @@
 @import "pages/main/_main_preferences";
 @import "pages/main/_main_advantages";
 @import "pages/main/main_swiper";
+@import "pages/main/main_companies";
+@import "pages/main/main_publications";
+@import "global/_footer";
 
