--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -27,8 +27,7 @@ h4{
     font-size: 14px;
     line-height: 17px;
     font-weight: 700;
-    color: $main;
-    letter-spacing: 1px;    
+    color: $active-regular; 
 }
 h5{
     font-size: 16px;
