--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -9,6 +9,7 @@
     &__logo-svg{
         width: 130px;
         height: 60px;
+        fill: white;
     }
     &__contacts-and-menu{
         display: flex;
@@ -35,10 +36,13 @@
             @include fonts(12px, 15px, 700, white, 1px);
             padding: 5px 7px;
             text-transform: uppercase;
+            border-radius: 8px;
         }
         &__language--active{
             background-color: $accent;
-            border-radius: 8px;
+        }
+        &__language:hover{
+            background-color: rgba(255, 255, 255, 0.2);
         }
         &__address{
             @include fonts(16px, 19px, 400, white, false);
@@ -62,12 +66,13 @@
             width: 24px;
             height: 24px;
             fill: white;
+            transition: fill 0.20s ease-in-out;
+        }
+        &__facebook:hover{
+            fill: $accent;
         }
     }
     .main-navigation{
-        &__nav{
-
-        }
         &__list{
             display: flex;
             justify-content: end;
@@ -81,9 +86,46 @@
         &__link{
             display: block;
             @include fonts(16px, 19px, 700, white, false);
+            position: relative;
         }
-        &__link:active{
+        &__link::after{
+            @include pseudo;
+            width: 100%;
+            height: 2px;
+            background-color: white;
+            bottom: -3px;
+            left: 0;
+            opacity: 0;
+            transition: opacity 0.25s;
+        }
+        &__link:hover::after{
+            opacity: 1;
+        }
+        &_link--active{
             color: $accent;
         }
+    }
+}
+.main-header--white{
+    .main-header__logo-svg{
+        fill: $main;
+    }
+    .contacts__language, .contacts__address, .contacts__phone{
+        color: $text;
+    }
+    .contacts__facebook{
+        fill: $text;
+    }
+    .main-navigation__link{
+        color: $active-regular;
+    }
+    .contacts__languages::after, .contacts__address::after, .contacts__phone::after{
+         background-color: $text;
+    }
+    .contacts__language:hover{
+        background-color: $bg;
+    }
+    .main-navigation__link::after{
+        background-color: $active-regular;
     }
 }
