--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,3 +21,6 @@
 @import "pages/about-us/_about-us_legal-services";
 @import "pages/about-us/_about-us_team";
 @import "pages/about-us/_about-us_quality";
+@import "pages/about-us/_about-us_achievements";
+@import "pages/team/_team_team";
+@import "pages/contact/_contact_contacts-and-form";
